--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "totp-generator": "^0.0.14",
+    "tough-cookie": "^4.1.2",
     "vrchat": "^1.11.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.3",
+    "@types/totp-generator": "^0.0.5",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
