--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "axios": "^0.26.1",
         "axios-cookiejar-support": "^4.0.6",
+        "axios-rate-limit": "^1.3.0",
         "body-parser": "^1.20.2",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
