--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,16 @@
 {
     "name": "express",
     "version": "1.0.0",
+    "engines": {
+        "npm": "8.1.2",
+        "node": "16.13.1"
+    },
     "main": "index.js",
     "private": true,
     "scripts": {
         "build": "npx tsc",
-        "start": "node dist/index.js",
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+        "start": "node public/index.js",
+        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q public/index.js\""
     },
     "dependencies": {
         "axios": "^0.26.1",
