--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
         "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-image": "^4.1.0",
         "react-router-dom": "^6.11.2",
         "styled-components": "^5.3.10",
         "vrchat": "^1.12.0"
